--- a/imagenflask/templates/news.html
+++ b/imagenflask/templates/news.html
@@ -40,8 +40,7 @@
 <script type="text/javascript"> 
   <!-- 
   rssfeed_url = new Array(); 
-  rssfeed_url[0]="https://siftrss.com/f/m0Jq9pKWDB"; rssfeed_url[1]="https://siftrss.com/f/QD5g8ZVa1K"; rssfeed_url[2]="https://siftrss.com/f/0beX3KYN9w"; rssfeed_url[3]="https://siftrss.com/f/75LAjwDM38"; 
-  rssfeed_frame_width="5004"; 
+rssfeed_url[0]="https://siftrss.com/f/3mw7gllxvXA"; rssfeed_url[1]="https://siftrss.com/f/3meqaBZnD1M"; rssfeed_url[2]="https://siftrss.com/f/YKmeDKRwJjd"; rssfeed_url[3]="https://siftrss.com/f/Zkrq07BbG6"; rssfeed_url[4]="https://siftrss.com/f/P1qDbvB7qAz";    rssfeed_frame_width="5004"; 
   rssfeed_frame_height="1000"; 
   rssfeed_scroll="on"; 
   rssfeed_scroll_step="6"; 
